<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FittingSizeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:id="@+id/im_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_back_black"
                    android:background="#00000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/appbar_size_gown"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/et_size_bust"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints=""
                android:background="@drawable/bg_edit_text_filled"
                android:fontFamily="@font/poppins_semi_bold"
                android:hint="@string/et_bust"
                android:inputType="number"
                android:paddingStart="26dp"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="5dp"
                android:text="@string/unit_cm"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,OnClick" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/et_size_arm_hole"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints=""
                android:background="@drawable/bg_edit_text_filled"
                android:fontFamily="@font/poppins_semi_bold"
                android:hint="@string/et_arm_hole"
                android:inputType="number"
                android:paddingStart="26dp"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="5dp"
                android:text="@string/unit_cm"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,OnClick" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/et_size_waist"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints=""
                android:background="@drawable/bg_edit_text_filled"
                android:fontFamily="@font/poppins_semi_bold"
                android:hint="@string/et_waist"
                android:inputType="number"
                android:paddingStart="26dp"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="5dp"
                android:text="@string/unit_cm"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,OnClick" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/et_size_hip"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints=""
                android:background="@drawable/bg_edit_text_filled"
                android:fontFamily="@font/poppins_semi_bold"
                android:hint="@string/et_hip"
                android:inputType="number"
                android:paddingStart="26dp"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="5dp"
                android:text="@string/unit_cm"
                android:textColor="@color/colorGray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,OnClick" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/bg_information"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/title_note"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/semua_ukuran_dalam_sentimeter_cm"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/ukur_secara_melingkar"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_info"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="bottom|end"
                    android:contentDescription="@string/todo" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/see_template"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:riv_corner_radius="8dp"
                    android:background="@drawable/bg_with_shadow"
                    android:clickable="true"
                    android:contentDescription="@string/todo"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/image_template"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="See Template"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_custom_size"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:backgroundTint="@null"
            android:background="@drawable/bg_button_rounded_gold"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/btn_custom_size"
            android:textAllCaps="false"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            tools:ignore="MissingConstraints,UnusedAttribute" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>